# OMS-Auditd-Plugin

./: .gitignore  CMakeLists.txt
auoms/src/: AuomsConfig.cpp  AuomsConfig.h  CMakeLists.txt
auomscollect/src/: CMakeLists.txt
auomsctl/src/: CMakeLists.txt
common/include/: Signals.h
common/src/: CMakeLists.txt  OperationalStatusTests.cpp
fakeaudispd/src/: CMakeLists.txt
file2sock/src/: CMakeLists.txt
testreceiver/src/: CMakeLists.txt
